stub:email failed

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -6,5 +6,6 @@
 "password_size": "Password must be at least 6 characters",
 "password_format": "Password must have 1 uppercase, 1 lowercase and 1 number",
 "email_inuse": "Email in use",
-"user_created_success": "User created"
+"user_created_success": "User created",
+"email_failure": "Email Failure"
 }
