--- a/locales/th/translation.json
+++ b/locales/th/translation.json
@@ -6,5 +6,6 @@
 "password_size" : "รหัสผ่านต้องมีความยาวไม่ต่ำกว่า 6 ตัวอักษร",
 "password_format" : "รหัสผ่านต้องประกอบไปด้วยตัวอักษรใหญ่อย่างน้อย 1 ตัว,ตัวอักษรเล็ก 1 ตัว และตัวเลข 1 ตัว",
 "email_inuse" : "อีเมลล์นี้ถูกใช้งานแล้ว",
-"user_created_success": "สร้างบัญชีผู้ใช้งานสำเร็จ"
+"user_created_success": "สร้างบัญชีผู้ใช้งานสำเร็จ",
+"email_failure": "การส่งอีเมลล์ล้มเหลว"
 }
